# agents-ia

./: .gitignore
aihero/course/: commands  example.md  main.py  pyproject.toml
devops-agent/: ADDING_NEW_AGENTS.md  DEVOPS_AI_ARCHITECTURE.md  GETTING_STARTED.md  IMPLEMENTATION_LOG_NEW_AGENTS.md  Makefile  README.md  __init__.py  pyproject.toml  requirements.txt
devops-agent/agents/: __init__.py
devops-agent/agents/base/: __init__.py  agent.py  tools.py
devops-agent/agents/cicd_agent/: __init__.py  agent.py
devops-agent/agents/cicd_agent/tools/: __init__.py  docker.py  github_actions.py  pipeline.py
devops-agent/agents/infrastructure_agent/: __init__.py  agent.py
devops-agent/agents/infrastructure_agent/tools/: __init__.py  terraform.py
devops-agent/agents/security_agent/: __init__.py  agent.py
devops-agent/agents/security_agent/tools/: __init__.py  compliance_checker.py  secret_manager.py  security_policy.py  vulnerability_scanner.py
devops-agent/agents/testing_agent/: __init__.py  agent.py
devops-agent/agents/testing_agent/tools/: __init__.py  coverage_analyzer.py  test_framework.py
devops-agent/orchestrator/: __init__.py  graph.py  state.py
english-educator-agent/: .dockerignore  .gitignore  .pre-commit-config.yaml  API_EXAMPLES.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  ESTRUCTURA_PROYECTO.md  EXECUTIVE_SUMMARY.md  FAQ.md  FILES_SUMMARY.md  GUIA_NAVEGACION.md  LICENSE  PROGRAMA_COMPLETO_AGENTES_IA.md  PROJECT_SUMMARY.md  PROYECTO_COMPLETADO.md  PROYECTO_FINAL_ENGLISH_TUTOR.md  QUICK_START.md  README.md  ROADMAP.md  SETUP_GUIDE.md  demo.py  env.example  init_db.py  initialize.py  pytest.ini  requirements-dev.txt  setup.cfg  start.bat  start.sh  test_system.py
english-educator-agent/.github/workflows/: ci-cd.yml
english-educator-agent/backend/: config.py  main.py  requirements.txt
english-educator-agent/data/: README.md
english-educator-agent/docker/: Dockerfile.backend  Dockerfile.worker  docker-compose.yml
english-educator-agent/tests/: conftest.py
project-management-agent/: .env.example  .gitignore  LICENSE  README.md  commnands  generate_complete_project.py  generate_complete_project_fixed.py  main.py  main_capabilities_files.py  migrate_to_database.py  model_check_script.py  requirements-minimal.txt  requirements.txt  requirements_txt.py  setup_database.py
project-management-agent/config/: settings.py
project-management-agent/core/: agent.py  agent_capacities_files.py  backup  claude_client copy.py  claude_client.py
project-management-agent/database/: _init_.py  conversation_db.py  conversation_db_backup.py
project-management-agent/exports/: export_session_20250923_154135.markdown
project-management-agent/methodology/: pmi_framework.py  safe_framework.py
project-management-agent/migration/: fix_database.py
project-management-agent/scripts/: quick_start.py
project-management-agent/templates/: template_engine.py
project-management-agent/tests/: test_conversation_system.py
project-management-agent/utils/: logging_config.py  validators.py
project-management-agentic/: .env  .env.example  .gitignore  Dockerfile  MULTIAGENT_ARCHITECTURE.md  README.md  code.txt  commnands  docker-compose.yml  main v1.py  main.py  main_shor.py  next-2025-09-25.md  next.md  plan-pmp-agent-2.md  plan-pmp-agent.md  pmp_system.db  pydantic_fix.py  requirements.txt  run_tests.py  setup_pmp_system.py  test_llm_integration.py
project-management-agentic/agents/: __init__.py  agent_factory.py  base_agent.py  cost_budget_agent.py  document_agent.py  orchestrator.py  pmp_project_agent.py  project_manager_agent.py  risk_management_agent.py  template_agent.py
project-management-agentic/config/: __init__.py  database.py  settings.py
project-management-agentic/models/: __init__.py  chat.py  document.py  project.py
project-management-agentic/rag/: __init__.py  document_processor.py  retriever.py  vector_store.py
project-management-agentic/storage/: __init__.py  database_manager.py  file_manager.py
project-management-agentic/tests/: test_agents.py  test_multiagent_system.py  test_rag.py  test_storage.py
project-management-agentic/utils/: __init__.py  helpers.py  logger.py
project-management-agentic/workflows/: __init__.py  project_workflow.py  workflow_manager.py
(+50 files in other folders)
